<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateParty"
    android:background="@color/colorPrimaryPurple">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:background="@color/colorPrimaryDarkPurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/create_party_account_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/create_party_help_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_party_account_icon" />

        <TextView
            android:id="@+id/create_party_title"
            android:layout_width="146dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/create_party"
            android:textColor="@android:color/white"
            android:textSize="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/accessCode"
            android:layout_width="115dp"
            android:layout_height="22dp"
            android:layout_marginStart="156dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/create_party_back_arrow" />

        <TextView
            android:id="@+id/create_party_back_text4"
            android:layout_width="115dp"
            android:layout_height="22dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/back_home"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/create_party_back_arrow" />

        <ImageView
            android:id="@+id/create_party_back_arrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/create_party_disco"
        android:layout_width="79dp"
        android:layout_height="77dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="156dp"
        android:src="@drawable/disco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDarkPurple"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/create_party_disco"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <AutoCompleteTextView
        android:id="@+id/create_party_create_party_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/create_party_name"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <AutoCompleteTextView
        android:id="@+id/create_party_find_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/find_genres"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_party_create_party_name" />

    <AutoCompleteTextView
        android:id="@+id/create_party_find_songs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/find_songs"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_party_find_genres" />

    <ToggleButton
        android:id="@+id/create_party_public_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/btn_rounded_corner"
        android:textColor="@android:color/white"
        android:textOff="@string/public_button"
        android:textOn="@string/public_button"
        app:layout_constraintBottom_toTopOf="@+id/create_party_create_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/create_party_private_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/btn_rounded_corner"
        android:text="@string/private_button"
        android:textColor="@android:color/white"
        android:textOff="@string/private_button"
        android:textOn="@string/private_button"
        app:layout_constraintBottom_toTopOf="@+id/create_party_create_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/create_party_create_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_rounded_no_edge"
        android:text="Create Party"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>