<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseParty"
    android:background="@color/colorPrimaryPurple">

    <ImageView
        android:id="@+id/choose_party_account_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/choose_party_help_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_party_account_icon" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="136dp"
        android:src="@drawable/disco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_party_app_name"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:layout_marginEnd="119dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/choose_party_select_option"
        android:layout_width="284dp"
        android:layout_height="38dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/option_select"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_party_app_name" />

    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="31dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_party_select_option" />

    <TextView
        android:id="@+id/choose_party_join_party"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="66dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/join_party"
        android:textColor="@android:color/white"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/choose_party_create_party"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="66dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/create_party"
        android:textColor="@android:color/white"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_party_join_party" />

</android.support.constraint.ConstraintLayout>