<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".JoinParty">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/join_party_account_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/join_party_help_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/join_party_account_icon" />

        <TextView
            android:id="@+id/create_party_title"
            android:layout_width="146dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/join_party"
            android:textColor="@android:color/white"
            android:textSize="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/join_party_back_text"
            android:layout_width="115dp"
            android:layout_height="22dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/back_home"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/join_party_back_arrow" />

        <ImageView
            android:id="@+id/join_party_back_arrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <AutoCompleteTextView
        android:id="@+id/join_party_enter_code"
        android:layout_width="224dp"
        android:layout_height="36dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded_transparent"
        android:hint="@string/join_party_enter_code_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/Join_Party_Trending"
        android:layout_width="320dp"
        android:layout_height="140dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="23dp"
        android:background="@color/toggle_button_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_party_enter_code">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/join_party_trending_recycler_vew"
                android:layout_width="320dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:text="Trending"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/Join_Party_All"
        android:layout_width="320dp"
        android:layout_height="140dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="23dp"
        android:background="@color/toggle_button_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Join_Party_Trending">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/join_party_all_recycler_vew"
                android:layout_width="320dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:text="All"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/sort_layout"
        android:layout_width="259dp"
        android:layout_height="84dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Join_Party_All">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="34dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/sort_by_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_toggle"
                android:textOff=""
                android:textOn=""
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="34dp"
                tools:layout_conversion_wrapHeight="84"
                tools:layout_conversion_wrapWidth="88" />

            <RadioButton
                android:id="@+id/sort_by_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_toggle"
                android:textOff=""
                android:textOn=""
                tools:layout_conversion_absoluteHeight="32dp"
                tools:layout_conversion_absoluteWidth="34dp"
                tools:layout_conversion_wrapHeight="84"
                tools:layout_conversion_wrapWidth="88" />

        </RadioGroup>

        <TextView
            android:id="@+id/sort_by_people_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/sort_people"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/sort_by_distance_text"
            tools:layout_conversion_absoluteHeight="26dp"
            tools:layout_conversion_absoluteWidth="187dp"
            tools:layout_conversion_wrapHeight="50"
            tools:layout_conversion_wrapWidth="483" />

        <TextView
            android:id="@+id/sort_by_distance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/sort_distance"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/radioGroup"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="110dp"
            tools:layout_conversion_wrapHeight="50"
            tools:layout_conversion_wrapWidth="269" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/join_party_code_button"
        android:layout_width="79dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:text="@string/enter"
        app:layout_constraintStart_toEndOf="@+id/join_party_enter_code"
        app:layout_constraintTop_toTopOf="@+id/join_party_enter_code" />


</android.support.constraint.ConstraintLayout>